fetch result displays to page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button id="searchBtn">Search</button>
     </p>
   </form>
+  <div id="weatherDisplay"></div>
 
   <script src="script.js"></script>
 </body>
